--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ body {
     box-shadow: 0 0 30px lightblue;
 }
 
+.stats-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
+
 #button-container {
     text-align: center;
 }
